 * Fix: Prevent rich text editor crash when filtering copy-pasted content and the last block is to be removed, e.g. unsupported image (Thibaud Colas)
 * Fix: Removing rich text links / documents now also works when the text selection is backwards (Thibaud Colas)
 * Fix: Prevent the rich text editor from crashing when copy-paste filtering removes all of its content (Thibaud Colas)


2.4 (19.12.2018)
~~~~~~~~~~~~~~~~

 * Added support for Python 3.7 (Matt Westcott)
 * Added `max_count` option on page models to limit the number of pages of a particular type that can be created (Dan Braghis)
 * Document and image choosers now show the document / image's collection (Alejandro Garza, Janneke Janssen)
 * Added new "Welcome to your Wagtail site" Starter Page when using wagtail start command (Timothy Allen, Scott Cranfill)
 * Added ability to run individual tests through tox (Benjamin Bach)
 * Collection listings are now ordered by name (Seb Brown)
 * Added `file_hash` field to documents (Karl Hobley, Dan Braghis)
 * Added last login to the user overview (Noah B Johnson)
 * Changed design of image editing page (Janneke Janssen, Ben Enright)
 * Added Slovak character map for JavaScript slug generation (Andy Chosak)
 * Make documentation links on welcome page work for prereleases (Matt Westcott)
 * Allow overridden `copy()` methods in `Page` subclasses to be called from the page copy view (Robert Rollins)
 * Users without a preferred language set on their profile now use language selected by Django's `LocaleMiddleware` (Benjamin Bach)
 * Added hooks to customise the actions menu on the page create/edit views (Matt Westcott)
 * Cleanup: Use `functools.partial()` instead of `django.utils.functional.curry()` (Sergey Fedoseev)
 * Squashed migrations for wagtailimages (Karl Hobley)
 * Added `before_move_page` and `after_move_page` hooks (Maylon Pedroso)
 * Bulk deletion button for snippets is now hidden until items are selected (Karl Hobley)