@@ -74,6 +74,7 @@ Bug fixes
  * Prevent rich text editor crash when filtering copy-pasted content and the last block is to be removed, e.g. unsupported image (Thibaud Colas)
  * Removing rich text links / documents now also works when the text selection is backwards (Thibaud Colas)
  * Prevent the rich text editor from crashing when copy-paste filtering removes all of its content (Thibaud Colas)
+ * Page chooser now respects custom ``get_admin_display_title`` methods on parent page and breadcrumb (Haydn Greatnews)
 
 
 Upgrade considerations
